--- a/templates/index.html
+++ b/templates/index.html
@@ -3,4 +3,12 @@
     <h1>Hello!!</h1>
     Hi
   </body>
+
+    <ul>
+      {% for item in news_items %}
+        <li>{{ item.title }}</li>
+      {% endfor %}
+    </ul>
+
 </html>
+
