--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,12 @@
         <li><a href="/news/{{ item.id }}/">{{ item.title }}</a></li>
       {% endfor %}
     </ul>
+    
+    <form action="{{ url_for('create_news_item') }}" method="POST" >
+      Title: <input name="title"/><br />
+      Body: <textarea name="body"></textarea><br />
+      <input type="submit" value="Save"/>
+    </form>
 
 </html>
 
